# AKD-Ethercat-Master

./: .gitignore  .gitmodules  0x1722.txt  CMakeLists.txt  README.md  a.  a.out  a.txt  b.txt  c.txt  cppfixed.xml  d.txt  e.txt  f.txt  g.txt  h.txt  i.txt  j.txt  parameters  prevEno3Config.txt  simplePDOs.xml  temp.c  temp.txt  test.c  test2.xml  test5.xml  test6.xml  test7.xml
b/: CMakeCache.txt  Makefile  cmake_install.cmake  simpleMtrCtrl  simpleMtrCtrlx2
doc/: features.md  lessonslearned.md  tutorial.md
include/: AKDEcatController.h
scripts/: busStatus  saveSlaveParam  simplePDOs
src/: AKDEcatController copy.cpp  AKDEcatController.cpp  AKDEcatController.h  DS402EcatController.cpp  DS402EcatController.h  SDOTest.c  dcTest.c  old_simpleMtrCtrl.c  periodTest.c  sdoMtrCtrl.c  simpleMtrCtrl  simpleMtrCtrl.c  simpleMtrCtrl.cpp  simpleMtrCtrlx2.cpp
temp/: temp.c
tests/: CMakeLists.txt  simpleMtrCtrl.cpp  simpleMtrCtrlx2.cpp  simpleMtrCtrlx2Flex.cpp
tools/: fixedPDOS
